fix: feedback 로직 수정 (#26)